tests/baselines/reference/unusedTypeParameterInMethod2.errors.txt
unusedTypeParameterInMethod2.ts(2,18): error TS6133: 'Y' is declared but its value is never read.


==== unusedTypeParameterInMethod2.ts (1 errors) ====
    class A {
        public f1<X, Y, Z>() {
                     ~
!!! error TS6133: 'Y' is declared but its value is never read.
            var a: X;
            var b: Z;
            a;
            b;
        }
    }